force-app/main/default/objects/ssot__ResearchStudy__dlm/fields/ssot__ActualFinalDbLockDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ActualFinalDbLockDate__c</fullName>
    <label>Actual Final Database Lock Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ActualFinalDbLockDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>