force-app/main/default/objects/ssot__ResearchStudy__dlm/fields/ssot__ActualFirstPtcpFirstVisitDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ActualFirstPtcpFirstVisitDate__c</fullName>
    <label>Actual First Ptcp First Visit Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ActualFirstPtcpFirstVisitDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>