force-app/main/default/objects/ssot__ResearchStudy__dlm/fields/ssot__ActualLastPtcpEnrollmentDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ActualLastPtcpEnrollmentDate__c</fullName>
    <label>Actual Last Ptcp Enrollment Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ActualLastPtcpEnrollmentDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>