force-app/main/default/objects/ssot__ResearchStudy__dlm/fields/ssot__ForecastedFirstPtcpLastVisitDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ForecastedFirstPtcpLastVisitDate__c</fullName>
    <label>Forecasted First Ptcp Last Visit Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ForecastedFirstPtcpLastVisitDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>