force-app/main/default/objects/ssot__ResearchStudy__dlm/fields/ssot__ForecastedLastPtcpEnrollmentDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ForecastedLastPtcpEnrollmentDate__c</fullName>
    <label>Forecasted Last Ptcp Enrollment Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ForecastedLastPtcpEnrollmentDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>