force-app/main/default/objects/ssot__ResearchStudy__dlm/fields/ssot__PlannedFinalDbLockDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__PlannedFinalDbLockDate__c</fullName>
    <label>Planned Final Database Lock Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PlannedFinalDbLockDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>