force-app/main/default/objects/ssot__ResearchStudy__dlm/fields/ssot__rel_1742275288930_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1742275288930_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ResearchStudy_CareSpecialtyId_map_Ca_rel</label>
    <referenceTo>ssot__CareSpecialty__dlm</referenceTo>
    <relationshipLabel>ResearchStudy_CareSpecialtyId_map_Ca_rel</relationshipLabel>
    <relationshipName>rel_1742275288930_end</relationshipName>
    <type>Lookup</type>
</CustomField>