force-app/main/default/objects/ssot__ResearchStudy__dlm/fields/ssot__rel_1744957614349_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1744957614349_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ResearchStudy_ProtocolDocumentId_map_rel</label>
    <referenceTo>ssot__ContentDocument__dlm</referenceTo>
    <relationshipLabel>ResearchStudy_ProtocolDocumentId_map_rel</relationshipLabel>
    <relationshipName>rel_1744957614349_end</relationshipName>
    <type>Lookup</type>
</CustomField>